--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -51,6 +51,22 @@ nav#serverNav{
     align-items:center 
    }
 
+   #validation-user{
+    width:90%;
+      height: 300px;
+    background: rgb(152, 40, 218);
+    border: solid 2px blueviolet ;
+    border-radius: 15px;
+    position: fixed;
+    top:120px;
+     animation: myFrame 1s ease-in-out 0s ;  
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items:center 
+   }
+
+
    @keyframes myFrame {
     0% {height: 10px;width:10px }
     100%   { height: 300px; width:90% }
