--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -47,6 +47,11 @@
             <h3>Add Categories</h3>
           </a>
         </li>
+        <li class="nav-item" >
+          <a class="nav-link text-white" href="/admin/profile">
+            <h3>Profile</h3>
+          </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="/users/logout">
             <h3>Logout</h3>
