--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -51,7 +51,7 @@ nav#serverNav{
     align-items:center 
    }
 
-   #validation-user{
+   #validation-password,#validation-user{
     width:90%;
       height: 300px;
     background: rgb(152, 40, 218);
