change textarea to input

--- a/server/views/admin-weegie-add-edit-question.hbs
+++ b/server/views/admin-weegie-add-edit-question.hbs
@@ -8,23 +8,23 @@
       <h3 class="text-primary">
         <h3 class="text-primary">Question:</h3>
     </label>
-    <textarea rows="3" class="form-control form-control-success mb-4" id="inputSuccess1" name="title">{{this.weegieData.title}}</textarea>
-  </div>
+    <input type="text" id="inputSuccess1"  class="form-control form-control-success mb-4" name="title" value="{{this.weegieData.title}}">
+   </div>
 
   <div class="form-group has-success">
     <label class="text-success">
       <h3 class="text-primary">
         <h3 class="text-primary">chooise a:</h3>
     </label>
-    <textarea rows="3" class="form-control form-control-success mb-4" id="inputSuccess1" name="a">{{this.weegieData.choices.a}}</textarea>
-  </div>
+    <input type="text" name="a" value="{{this.weegieData.choices.a}}" class="form-control form-control-success mb-4">
+   </div>
 
    <div class="form-group has-success">
     <label class="text-success">
       <h3 class="text-primary">
         <h3 class="text-primary">chooise b:</h3>
     </label>
-    <textarea rows="3" class="form-control form-control-success mb-4" id="inputSuccess1" name="b">{{this.weegieData.choices.b}}</textarea>
+        <input type="text" name="b" value="{{this.weegieData.choices.b}}" class="form-control form-control-success mb-4">
   </div>
 
    <div class="form-group has-success">
@@ -32,23 +32,24 @@
       <h3 class="text-primary">
         <h3 class="text-primary">chooise c:</h3>
     </label>
-    <textarea rows="3" class="form-control form-control-success mb-4" id="inputSuccess1" name="c">{{this.weegieData.choices.c}}</textarea>
-  </div>
+        <input type="text" name="c" value="{{this.weegieData.choices.c}}" class="form-control form-control-success mb-4">
+
+   </div>
 
    <div class="form-group has-success">
     <label class="text-success">
       <h3 class="text-primary">
         <h3 class="text-primary">chooise d:</h3>
     </label>
-    <textarea rows="3" class="form-control form-control-success mb-4" id="inputSuccess1" name="d">{{this.weegieData.choices.d}}</textarea>
-  </div>
+        <input type="text" name="d" value="{{this.weegieData.choices.d}}" class="form-control form-control-success mb-4" >
+   </div>
 
   <div class="form-group has-success">
     <label class="text-success">
       <h3 class="text-primary">
         <h3 class="text-primary">answer<p class="text-danger">(write the correct choice letter: a,b,c,d):</p></h3>
     </label>
-    <textarea rows="3" class="form-control form-control-success mb-4" id="inputSuccess1" name="answer">{{this.weegieData.answer}}</textarea>
+        <input type="text" name="answer" value="{{this.weegieData.answer}}" class="form-control form-control-success mb-4">
   </div>
 
     <button class="btn btn-lg btn-danger" type="submit">Edit Question</button>
@@ -63,48 +64,48 @@
       <h3 class="text-primary">
         <h3 class="text-primary">Question:</h3>
     </label>
-    <textarea rows="3" class="form-control form-control-success mb-4" id="inputSuccess1" name="title"></textarea>
-  </div>
+        <input type="text" name="title" value="" class="form-control form-control-success mb-4" >
+   </div>
 
   <div class="form-group has-success">
     <label class="text-success">
       <h3 class="text-primary">
         <h3 class="text-primary">chooise a:</h3>
     </label>
-    <textarea rows="3" class="form-control form-control-success mb-4" id="inputSuccess1" name="a"></textarea>
-  </div>
+        <input type="text" name="a" class="form-control form-control-success mb-4" >
+   </div>
 
    <div class="form-group has-success">
     <label class="text-success">
       <h3 class="text-primary">
         <h3 class="text-primary">chooise b:</h3>
     </label>
-    <textarea rows="3" class="form-control form-control-success mb-4" id="inputSuccess1" name="b"></textarea>
-  </div>
+        <input type="text" name="b" class="form-control form-control-success mb-4" >
+   </div>
 
    <div class="form-group has-success">
     <label class="text-success">
       <h3 class="text-primary">
         <h3 class="text-primary">chooise c:</h3>
     </label>
-    <textarea rows="3" class="form-control form-control-success mb-4" id="inputSuccess1" name="c"></textarea>
-  </div>
+        <input type="text" name="c" class="form-control form-control-success mb-4" >
+   </div>
 
    <div class="form-group has-success">
     <label class="text-success">
       <h3 class="text-primary">
         <h3 class="text-primary">chooise d:</h3>
     </label>
-    <textarea rows="3" class="form-control form-control-success mb-4" id="inputSuccess1" name="d"></textarea>
-  </div>
+        <input type="text" name="d" value="" class="form-control form-control-success mb-4" >
+   </div>
 
   <div class="form-group has-success">
     <label class="text-success">
       <h3 class="text-primary">
         <h3 class="text-primary">answer<p class="text-danger">(write the correct choice letter: a,b,c,d):</p></h3>
     </label>
-    <textarea rows="3" class="form-control form-control-success mb-4" id="inputSuccess1" name="answer"></textarea>
-  </div>
+        <input type="text" name="answer" value="" class="form-control form-control-success mb-4">
+   </div>
 
     <button class="btn btn-lg btn-danger" type="submit">Add New Question</button>
    
